tests/ui/parser/using_operator_missing.sol
// Solc test: test/libsolidity/syntaxTests/operators/userDefined/operator_parsing_operator_name_missing.sol.

using {f as} for uint; //~ ERROR: expected
